macvlan/plex-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex-deploy
  namespace: plex
  labels:
    app: plex
  annotations:
    openshift.io/scc: anyuid
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
      annotations:
        k8s.v1.cni.cncf.io/networks: 'default/macvlan-plex'
    spec:
      serviceAccountName: plex-sa
      hostname: ocp-plex
      containers:
      - name: plex
        image: shaker242/plex:u18.04
        imagePullPolicy: Always
        # resources:
        #     limits:
        #       cpu: 500m
        #       memory: 1Gi
        readinessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 15
          timeoutSeconds: 5
        livenessProbe:
          httpGet:
            path: /identity
            port: 32400
          initialDelaySeconds: 10
          timeoutSeconds: 10
        ports:
          - name: plex
            containerPort: 32400
          - name: http
            containerPort: 32400
          - name: https
            containerPort: 32443
        volumeMounts:
          - name: plex-config
            mountPath: /config
          # - name: plex-transcode
          #   # For remote sessions, it's good to use a transcoder; I put it in memory below.
          #   # Note: although limted to 2Gi, I have still seen it grow upwards of 10Gi.
          #   mountPath: /transcode
          - name: plex-media
            mountPath: /media
      volumes:
      - name: plex-config
        persistentVolumeClaim:
          claimName: pvc-plexfs-config
      # - name: plex-transcode
      #   emptyDir:
      #     medium: Memory
      #     sizeLimit: 2Gi
      - name: plex-media
        persistentVolumeClaim:
          claimName: pvc-plexfs-media
