macvlan/plex-static-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: plex-static-pod
  annotations:
    k8s.v1.cni.cncf.io/networks: default/macvlan-static
spec:
  containers:
  - name: plex
    image: shaker242/plex:u18.04
    imagePullPolicy: Always
    readinessProbe:
      httpGet:
        path: /identity
        port: 32400
      initialDelaySeconds: 15
      timeoutSeconds: 5
    livenessProbe:
      httpGet:
        path: /identity
        port: 32400
      initialDelaySeconds: 10
      timeoutSeconds: 10
    ports:
      - name: plex
        containerPort: 32400
    volumeMounts:
      - name: plex-config
        mountPath: /config
      - name: plex-transcode
        mountPath: /transcode
      - name: plex-media
        mountPath: /media
  volumes:
  - name: plex-config
    persistentVolumeClaim:
      claimName: pvc-plex-config
  - name: plex-transcode
    persistentVolumeClaim:
      claimName: pvc-plex-transcode
  - name: plex-media
    persistentVolumeClaim:
      claimName: pvc-plex-media
