macvlan/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: plex
  annotations:
    k8s.v1.cni.cncf.io/networks: 'default/macvlan-plex'
spec:
  containers:
  - name: test-pod
    command: ["/bin/sh", "-c", "sleep 2000000000000"]
    image: centos
