macvlan/plex-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: plex
  name: plex-deploy
  namespace: plex
spec:
  ports:
  - port: 32400
    protocol: TCP
    targetPort: 32400
  selector:
    app: plex
  type: ClusterIP
