macvlan/plex-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: plex
  name: plex-route
  namespace: plex
spec:
  host: ocp-plex.apps.openshift.redcloud.land
  port:
    targetPort: 32400
  tls:
    insecureEdgeTerminationPolicy: None
    termination: passthrough
  to:
    kind: Service
    name: plex-deploy
    weight: 100
  wildcardPolicy: None
